--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -2,18 +2,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relative_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#A0BFE6"
+    android:backgroundTint="#A1C6D3"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp">
 
     <ImageView
         android:id="@+id/slide_image"
-        android:layout_width="60dp"
-        android:layout_height="51dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="137dp"
+        android:layout_height="125dp"
+        android:layout_alignWithParentIfMissing="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginStart="135dp"
+        android:layout_marginLeft="135dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="254dp"
+        android:layout_marginRight="139dp"
+        android:textAlignment="center"
         app:srcCompat="@android:drawable/ic_menu_myplaces" />
 
     <TextView
@@ -22,9 +31,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="167dp"
+
+        android:layout_marginRight="20dp"
         android:text="I am a recruiter!"
-        android:textSize="24sp" />
+        android:textAlignment="center"
+        android:textSize="34sp" />
 
     <TextView
         android:id="@+id/slide_desc"
@@ -32,7 +45,23 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="128dp"
-        android:text="I care deeply about:" />
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="263dp"
+        android:text="I care deeply about:"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/slide_heading"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="352dp"
+        android:text="CheckBox" />
 
 </RelativeLayout>
