--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A0BFE6"
+    android:background="#FFFFFF"
     android:backgroundTint="#A1C6D3"
     android:paddingLeft="20dp"
     android:paddingRight="20dp">
@@ -79,6 +78,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginBottom="300dp"
         android:text="CheckBox" />
+
     <CheckBox
         android:id="@+id/checkBox3"
         android:layout_width="wrap_content"
@@ -126,6 +126,36 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="69dp"
         android:layout_marginTop="350dp" />
+
+    <TextView
+        android:id="@+id/info2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="400dp" />
+
+    <TextView
+        android:id="@+id/info3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="450dp" />
+
+    <TextView
+        android:id="@+id/info4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="500dp" />
 
 
 </RelativeLayout>
